# mk-scoreboard

./: .env.example  .gitignore  README.md  build-containers.sh  docker-compose.yml  package-lock.json  package.json
backend/: Cargo.toml  Dockerfile
backend/migrations/: 20230605110557_setup.sql  20240821193543_add_archiving.sql  20240903174919_add_unique_name.sql  20240903221554_remove_birthday.sql  20240908213032_add_password_hash.sql  20240909165412_add_sessions.sql
backend/src/: main.rs  utils.rs
backend/src/api/: main.rs
backend/src/api/routes/: auth.rs  games.rs  groups.rs  mod.rs  players.rs
backend/src/routes/: auth.rs  games.rs  groups.rs  mod.rs  players.rs
backend/src/tools/: main.rs
db/: docker-compose.yml
frontend/: Dockerfile  index.html  package.json  vite.config.ts
frontend/src/: App.tsx  index.tsx
frontend/src/components/: AuthProvider.tsx  Badge.tsx  Dropdown.tsx  GroupsProvider.tsx  HeaderBar.tsx  IntTextBox.tsx  NumberGames.tsx  Page.tsx  PlayerCard.tsx  PlayerScoreInput.tsx  SideBar.tsx  SideBarButton.tsx  SimplePlayerCard.tsx  TextBox.tsx
frontend/src/data/: fetch.ts  groups.ts  groups.tsx  ip.ts  playerStats.ts  playerStats.tsx  stats.ts  types.ts  types.tsx
frontend/src/routes/: addGame.tsx  graph.tsx  headToHead.tsx  homePage.tsx  itemGenerator.tsx  modifyPlayers.tsx  scoreboard.tsx  settings.tsx  simpleScoreboard.tsx
frontend/src/routes/functions/: addGame.tsx
src/: index.css
src/components/: Button.tsx  PlayerCard.tsx  SideBar.tsx
