[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.9.0"
chrono = { version = "0.4.38", features = ["clock"] }
dotenv = "0.15.0"
itertools = "0.13.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
sqlx = { version = "0.8.1", features = [
	"tls-native-tls",
	"postgres",
	"macros",
	"time",
	"chrono",
] }
urlencoding = "2.1.3"
