[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "api"
path = "src/api/main.rs"

[[bin]]
name = "tools"
path = "src/tools/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.9.0"
actix-web-httpauth = "0.8.2"
bcrypt = "0.15.1"
chrono = { version = "^0.4.1", features = ["clock", "serde"] }
clap = { version = "4.5.17", features = ["derive"] }
dotenv = "0.15.0"
itertools = "0.13.0"
jsonwebtoken = "9.3.0"
reqwest = "0.12.7"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
sqlx = { version = "0.8", features = ["tls-native-tls", "postgres", "macros", "time", "chrono", "runtime-tokio", "uuid"] }

urlencoding = "2.1.3"
uuid = { version = "1.10.0", features = ["v4"] }
